<resources>
    <string name="app_name">IoT mobile</string>
    <string name="logo_description">IoT mobile logo</string>

    <string name="create_account_link">Nie masz konta? Stwórz nowe</string>
    <string name="log_in_link">Masz już konto? Zaloguj się</string>

    <string name="login_button_text">Zaloguj się</string>
    <string name="create_account_button_text">Stwórz konto</string>

    <string name="password_hint">Hasło</string>
    <string name="email_hint">Email</string>
    <string name="username_hint">Nazwa użytkownika</string>

    <string name="invalid_email_message">Wprowadź poprawny adres email</string>
    <string name="invalid_password_message">Wprowadź poprawne hasło</string>
    <string name="invalid_new_password_message">Wprowadź co najmniej 8 znaków</string>
    <string name="invalid_username_message">Wprowadź co najmniej 6 znaków</string>
    <string name="login_failed_message">Nie udało się zalogować</string>
    <string name="register_failed_message">Nie udało się zarejestrować</string>

    <string name="authorization_dialog">Autoryzacja…</string>
    <string name="registration_dialog">Tworzenie konta…</string>

    <string name="required_text_helper">Wymagane</string>

    <string name="logout_bottom_nav">Wyloguj się"</string>
    <string name="refresh_bottom_nav">Odśwież"</string>

    <string name="device_group_tab_item">Urządzenia główne"</string>
    <string name="user_group_tab_item">Grupy użytkowników"</string>
    <string name="executive_device_tab_item">Urządzenia wykonawcze"</string>
    <string name="sensor_tab_item">Czujniki"</string>

    <string name="sensor_not_active">Nie aktywny</string>

    <string name="main_menu_login_failed_message">Wystąpił błąd, proszę zalogować się ponownie</string>
    <string name="main_menu_load_failed_message">Wystąpił błąd, proszę odświeżyć dane</string>

    <string name="user_group_executive_btn">Urządzenia"</string>
    <string name="user_group_sensor_btn">Czujniki"</string>

    <string name="device_no_info">Brak informacji</string>
    <string name="device_state">Stan:</string>
    <string name="device_is_updated">Zsynchronizowane:</string>
    <string name="device_is_active">Aktywne:</string>
    <string name="device_type_name">Typ:</string>
    <string name="device_default_state">Stan domyślny:</string>
    <string name="device_is_formula_used">Automatyczne sterowanie:</string>
    <string name="device_formula_name">Nazwa formuły:</string>
    <string name="device_positive_state">Stan gdy formuła spełniona:</string>
    <string name="device_negative_state">Stan gdy formuła niespełniona:</string>

    <string name="device_state_hint">Stan</string>
    <string name="device_formula_hint">Automatyczne sterowanie</string>
    <string name="change_state_btn">Aktualizuj</string>

    <string name="device_min_value">Minimalny stan:</string>
    <string name="device_max_value">Maksymalny stan:</string>

    <string name="device_base_state">Podstawowy</string>
    <string name="device_altern_state">Alternatywny</string>

    <string name="yes">Tak</string>
    <string name="no">Nie</string>
    <string name="none">Brak</string>

</resources>
